--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
       rel="icon"
       href="./assets/triForce.png"
       type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="styles.css" />
 
     <meta charset="UTF-8" />
     <meta
@@ -13,25 +16,25 @@
     <title>Alura Geek</title>
   </head>
   <body>
-    <header >
-        <div class="cabecera">
-            <h1>AluraGeek</h1>
-            <img
-              class="cabecera-logo"
-              src="assets/pixelHeart.png"
-              alt="Logo" />
-          </header>
-        </div>
-    
+    <header class="cabecera">
+      <img
+        class="cabecera-logo"
+        src="assets/pixelHeart.png"
+        alt="Logo" />
+      <h1>AluraGeek</h1>
+    </header>
+
     <div
       id="body_container"
       class="body_container">
       <div
         id="products_container"
         class="products_container">
-        <h1>Mis productos</h1>
+        <h1>Mis productos:</h1>
       </div>
-      <form id="productForm">
+      <form
+        id="productForm"
+        class="productForm">
         <input
           type="text"
           id="name"
