--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         class="cabecera-logo"
         src="assets/pixelHeart.png"
         alt="Logo" />
+      <img
+        class="cabecera-logo"
+        src="assets/pixelHeart.png"
+        alt="Logo" />
+      <img
+        class="cabecera-logo"
+        src="assets/pixelHeart.png"
+        alt="Logo" />
       <h1>AluraGeek</h1>
     </header>
 
@@ -30,29 +38,48 @@
       <div
         id="products_container"
         class="products_container">
-        <h1>Mis productos:</h1>
+        <h1 id="product_title">Mis productos:</h1>
+        <div id="product_list"></div>
       </div>
-      <form
-        id="productForm"
-        class="productForm">
-        <input
-          type="text"
-          id="name"
-          placeholder="Nombre . ."
-          required />
-        <input
-          type="number"
-          id="price"
-          placeholder="Precio . ."
-          required />
-        <input
-          placeholder="Imagen . ."
-          type="url"
-          id="imageUrl"
-          required />
-        <button type="submit">Enviar</button>
-      </form>
+      <div id="form_container">
+        <form
+          id="productForm"
+          class="productForm">
+          <h1>Agregar producto:</h1>
+          <input
+            type="text"
+            id="name"
+            placeholder="Nombre . ."
+            required />
+          <input
+            type="number"
+            id="price"
+            placeholder="Precio . ."
+            required />
+          <input
+            placeholder="Imagen . ."
+            type="url"
+            id="imageUrl"
+            required />
+          <button type="submit">Enviar</button>
+        </form>
+      </div>
     </div>
+    <footer class="pie_pagina">
+      <img
+        class="cabecera-logo"
+        src="assets/pixelHeart.png"
+        alt="Logo" />
+      <img
+        class="cabecera-logo"
+        src="assets/pixelHeart.png"
+        alt="Logo" />
+      <img
+        class="cabecera-logo"
+        src="assets/pixelHeart.png"
+        alt="Logo" />
+      <h1>AluraGeek</h1>
+    </footer>
 
     <script src="aluraGeek.js"></script>
   </body>
